<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include
        android:id="@+id/display"
        layout="@layout/display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/flow_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:textSize="32sp"
        android:insetBottom="0dp"
        android:text="@string/_1"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_2"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_2"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />


    <Button
        android:id="@+id/button_3"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_3"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_4"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_4"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"
        />

    <Button
        android:id="@+id/button_5"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_5"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"
        />


    <Button
        android:id="@+id/button_6"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_6"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_7"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_7"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_8"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_8"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_9"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_9"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"/>


    <Button
        android:id="@+id/button_0"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_0"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="2"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />


    <Button
        android:id="@+id/button_ac"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_ac"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />


    <Button
        android:id="@+id/button_sign"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />


    <Button
        android:id="@+id/button_left_br"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/left_bracket"
        android:textSize="32sp"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"
        tools:layout_editor_absoluteX="206dp" />

    <Button
        android:id="@+id/button_right_br"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/right_bracket"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"/>



    <Button
        android:id="@+id/button_delete"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/delete"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"/>

    <Button
        android:id="@+id/button_redo"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/redo"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"/>

    <Button
        android:id="@+id/button_undo"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/dark_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/undo"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp"/>

    <Button
        android:id="@+id/button_div"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/orange"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sub"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/edit_result"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_mul"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/orange"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/mul"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_minus"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/orange"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/minus"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_plus"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/orange"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/plus"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_equals"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/orange"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/equals_calc"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />

    <Button
        android:id="@+id/button_dot"
        android:textSize="32sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/lite_grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/dot"
        app:cornerRadius="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:strokeColor="@color/strong_grey"
        app:strokeWidth="0.5dp" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="button_ac,button_undo,button_redo,button_delete,button_left_br,button_right_br,button_sign,button_div,button_7,button_8,button_9,button_mul,button_4,button_5,button_6,button_minus,button_1,button_2,button_3,button_plus,button_0,button_dot,button_equals"
        app:flow_horizontalStyle="packed"
        app:flow_maxElementsWrap="4"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />



    <androidx.constraintlayout.widget.Group
        android:id="@+id/digit_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="button_9,button_8,button_7,button_6,button_5,button_4,button_3,button_2,button_1,button_0,button_dot"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/op_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="button_right_br,button_left_br,button_equals,button_plus,button_minus,button_mul,button_div,button_sign"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/controllers_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="button_ac,button_delete,button_undo,button_redo"/>


</androidx.constraintlayout.widget.ConstraintLayout>